--- a/index.html
+++ b/index.html
@@ -112,8 +112,9 @@
   <script src="//cdn.jsdelivr.net/npm/prismjs@1.27.0/components/prism-json.min.js"></script>
 
   <!-- MathJax to render math formulas-->
+
   <script type="text/javascript" id="MathJax-script" async
-   src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.2.0/es5/tex-mml-chtml.js">
+    src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
   </script>
 </body>
 
