--- a/index.html
+++ b/index.html
@@ -112,7 +112,13 @@
   <script src="//cdn.jsdelivr.net/npm/prismjs@1.27.0/components/prism-json.min.js"></script>
 
   <!-- MathJax to render math formulas-->
-
+  <script>
+  MathJax = {
+    tex: {
+      inlineMath: [['$', '$'], ['\\(', '\\)']]
+    }
+  };
+</script>
   <script type="text/javascript" id="MathJax-script" async
     src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
   </script>
