--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
 
   <!-- add latex support -->
   <script src="//cdn.jsdelivr.net/npm/docsify-latex@0"></script>
+
+  <!-- click to copy -->
+  <script src="//cdn.jsdelivr.net/npm/docsify-copy-code/dist/docsify-copy-code.min.js"></script>
 </body>
 
 </html>
