--- a/index.html
+++ b/index.html
@@ -84,6 +84,18 @@
 		
   </style>
 
+  <!-- MathJax to render math formulas-->
+         <script type="text/x-mathjax-config"> MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "all" } } }); </script>
+       <script type="text/x-mathjax-config">
+         MathJax.Hub.Config({
+           tex2jax: {
+             inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+             processEscapes: true
+           }
+         });
+       </script>
+       <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+
 </head>
 
 <body>
@@ -114,10 +126,7 @@
   <!-- enable prism syntax highlighting for python -->
   <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-python.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/prismjs@1.27.0/components/prism-json.min.js"></script>
-
-  <!-- add latex support -->
   <script src="//cdn.jsdelivr.net/npm/docsify-latex@0"></script>
-
- </body>
+</body>
 
 </html>
